RESOLVED FIXED46459
IDBTransactionCoordinator incorrectly assumes that aborted transactions must have been started or running.
https://bugs.webkit.org/show_bug.cgi?id=46459
Summary IDBTransactionCoordinator incorrectly assumes that aborted transactions must ...
Andrei Popescu
Reported 2010-09-24 06:17:37 PDT
IDBTransactionCoordinator incorrectly assumes that aborted transactions must have been started or running.
Attachments
Patch (1.65 KB, patch)
2010-09-24 06:23 PDT, Andrei Popescu
jorlow: review+
Andrei Popescu
Comment 1 2010-09-24 06:23:29 PDT
Andrei Popescu
Comment 2 2010-09-24 06:24:56 PDT
Jeremy Orlow
Comment 3 2010-09-24 06:32:00 PDT
Comment on attachment 68668 [details] Patch Add a fixme to assert not reached at the end? r=me
Andrei Popescu
Comment 4 2010-09-24 08:24:02 PDT
Note You need to log in before you can comment on or make changes to this bug.