2010-09-24  Andrei Popescu  <andreip@google.com>

Reviewed by Jeremy Orlow.

        IDBTransactionCoordinator incorrectly assumes that aborted transactions must have been started or running.
        https://bugs.webkit.org/show_bug.cgi?id=46459

        No new tests, storage/indexeddb/transaction-basics.html covers this.

        Also fixes http://code.google.com/p/chromium/issues/detail?id=56732

        * storage/IDBTransactionCoordinator.cpp:
        (WebCore::IDBTransactionCoordinator::didFinishTransaction):

Canonical link: https://commits.webkit.org/58953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68254 268f45cc-cd09-0410-ab3c-d52691b4dbfc